--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">7MinutesWorkout</string>
     <string name="image">start image</string>
+    <string name="end">END</string>
+    <string name="start_image">start image</string>
+    <string name="congratulation">Congratulation!</string>
+    <string name="you_have_done_the_workout">You have done the workout!</string>
+    <string name="finish">FINISH</string>
 </resources>
